fix(app): avoid vault items to overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,7 @@
 body {
   color: $font-color;
   font-family: $Noto;
+  overflow: hidden;
 }
 
 .App {
